--- a/example/site/cards.html
+++ b/example/site/cards.html
@@ -5357,15 +5357,35 @@ var $elm$core$Task$perform = F2(
 				A2($elm$core$Task$map, toMessage, task)));
 	});
 var $elm$browser$Browser$element = _Browser_element;
-var $sudo_rushil$elm_cards$Cards$Clubs = {$: 'Clubs'};
+var $sudo_rushil$elm_cards$Cards$Back = {$: 'Back'};
 var $sudo_rushil$elm_cards$Deck$Deck = function (a) {
 	return {$: 'Deck', a: a};
 };
-var $sudo_rushil$elm_cards$Cards$Diamonds = {$: 'Diamonds'};
-var $sudo_rushil$elm_cards$Cards$Hearts = {$: 'Hearts'};
 var $sudo_rushil$elm_cards$Deck$ShuffledDeck = function (a) {
 	return {$: 'ShuffledDeck', a: a};
 };
+var $elm$core$Basics$composeL = F3(
+	function (g, f, x) {
+		return g(
+			f(x));
+	});
+var $sudo_rushil$elm_cards$Deck$appendCard = F2(
+	function (card, _v0) {
+		var cards = _v0.a.a;
+		return A3(
+			$elm$core$Basics$composeL,
+			$sudo_rushil$elm_cards$Deck$ShuffledDeck,
+			$sudo_rushil$elm_cards$Deck$Deck,
+			A3(
+				$elm$core$List$foldr,
+				$elm$core$List$cons,
+				_List_fromArray(
+					[card]),
+				cards));
+	});
+var $sudo_rushil$elm_cards$Cards$Clubs = {$: 'Clubs'};
+var $sudo_rushil$elm_cards$Cards$Diamonds = {$: 'Diamonds'};
+var $sudo_rushil$elm_cards$Cards$Hearts = {$: 'Hearts'};
 var $sudo_rushil$elm_cards$Cards$Spades = {$: 'Spades'};
 var $elm$core$List$append = F2(
 	function (xs, ys) {
@@ -5440,7 +5460,7 @@ var $author$project$Main$init = function (_v0) {
 				A2($elm$core$Task$perform, $author$project$Main$getViewport, $elm$browser$Browser$Dom$getViewport)
 			]),
 		{
-			deck: $sudo_rushil$elm_cards$Deck$fullDeck,
+			deck: A2($sudo_rushil$elm_cards$Deck$appendCard, $sudo_rushil$elm_cards$Cards$Back, $sudo_rushil$elm_cards$Deck$fullDeck),
 			message: $elm$core$Maybe$Nothing,
 			windowSize: _Utils_Tuple2(1024, 768)
 		});
@@ -5979,11 +5999,6 @@ var $elm$random$Random$generate = F2(
 			$elm$random$Random$Generate(
 				A2($elm$random$Random$map, tagger, generator)));
 	});
-var $elm$core$Basics$composeL = F3(
-	function (g, f, x) {
-		return g(
-			f(x));
-	});
 var $elm$core$Bitwise$and = _Bitwise_and;
 var $elm$core$Basics$negate = function (n) {
 	return -n;
@@ -6136,7 +6151,9 @@ var $author$project$Main$update = F2(
 				return $Janiczek$cmd_extra$Cmd$Extra$withNoCmd(
 					_Utils_update(
 						model,
-						{deck: deck}));
+						{
+							deck: A2($sudo_rushil$elm_cards$Deck$appendCard, $sudo_rushil$elm_cards$Cards$Back, deck)
+						}));
 		}
 	});
 var $author$project$Main$ShuffleTheDeck = {$: 'ShuffleTheDeck'};
@@ -6273,7 +6290,6 @@ var $author$project$CardsView$CardDescription = F3(
 var $elm$json$Json$Decode$andThen = _Json_andThen;
 var $elm$json$Json$Decode$fail = _Json_fail;
 var $elm$json$Json$Decode$string = _Json_decodeString;
-var $sudo_rushil$elm_cards$Cards$Back = {$: 'Back'};
 var $sudo_rushil$elm_cards$Cards$resolveFace = function (face) {
 	switch (face) {
 		case 1:
